--- a/src/app/reimbursement/expenses-extra-step/expenses-extra-step.component.css
+++ b/src/app/reimbursement/expenses-extra-step/expenses-extra-step.component.css
@@ -1,4 +1,5 @@
 .subtotal {
+  margin-top: 1rem;
   font-weight: bold;
   text-align: right;
 }
